add "index.html" but "modify.php" is not working yet

--- a/login.html
+++ b/login.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>用户登录</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="用户登录">
+    <meta name="author" content="Spy:wjj474957860@gmail.com">
     <link rel="Shortcut Icon" href="img/favicon.ico">
     <!-- Le styles -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
