--- a/register.html
+++ b/register.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Register</title>
+    <title>用户注册</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="用户注册">
+    <meta name="author" content="Spy:wjj474957860@gmail.com">
     <link rel="Shortcut Icon" href="img/favicon.ico">
     <!-- Le styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
